--- a/Raindrops.ipynb
+++ b/Raindrops.ipynb
@@ -177,7 +177,8 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -219,7 +220,7 @@
    "source": [
     "# How much pressure does a raindrop exert on the ground?\n",
     "\n",
-    "A moving raindrop comes to a stop when it hits the ground because there's a contact interaction between the rain and the ground.  I've heard that erosion is caused by wind and water, so let's investigate this with an estimate.  How big is the stopping force or pressure that exsists between the raindrop and the ground?\n",
+    "A moving raindrop comes to a stop when it hits the ground because there's a contact interaction between the rain and the ground.  I've heard that erosion is caused by wind and water, so let's investigate this with an estimate.  How big is the stopping force or pressure that exists between the raindrop and the ground?\n",
     "\n",
     "Before hitting the ground, the raindrop has a downward (terminal) velocity and a corresponding downward momentum.  The ground exerts an external force on the raindrop for a length of time, and the momentum disappears.  Mathematically, \n",
     "\n",
@@ -390,7 +391,7 @@
    "source": [
     "**Caveats**\n",
     "1. To find the terminal velocity of the raindrop, I assumed the drag force is quadratic in speed, $F\\approx b v^2$.\n",
-    "2. I assumed constant air density ot $1.2kg/m^3$.  Air pressure (and density) change with elevation and weather pattern.\n",
+    "2. I assumed constant air density of $1.2kg/m^3$.  Air pressure (and density) change with elevation and weather pattern.\n",
     "3. I assumed that the raindrop-ground collision takes $1ms$.\n",
     "4. I assumed that the raindrop collision was spread over the raindrop's cross-sectional area, $A=\\pi r^2$.\n",
     "5. Literature suggests that raindrops are roughly $r=0.2mm$ or smaller, so the horizontal scale of my graph is somewhat exaggerated.\n"
@@ -491,15 +492,6 @@
     "plt.legend()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
